test/syntax/fail/too_many_args.sync
let node f x = x

let node g x = f x 0
